force-app/main/default/objects/Shipping_Config__mdt/Shipping_Config__mdt.object-meta.xml
<CustomObject>
    <label>Shipping Config</label>
    <pluralLabel>Shipping Configs</pluralLabel>
</CustomObject>