force-app/main/default/objects/Shipping_Config__mdt/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <label>Carrier</label>
    <length>50</length>
    <type>Text</type>
    <description>Shipping carrier name (e.g. "USPS", "UPS").</description>
</CustomField>