force-app/main/default/objects/Shipping_Config__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Only active records are used by the shipping calculator.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>