force-app/main/default/objects/Shipping_Config__mdt/fields/Shipping_Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Method_Name__c</fullName>
    <description>Display name shown to the buyer at checkout (e.g. &quot;Standard Shipping&quot;).</description>
    <label>Shipping Method Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>