force-app/main/default/objects/Shipping_Config__mdt/fields/Shipping_Rate_Percent__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Rate_Percent__c</fullName>
    <description>Shipping rate as a percentage of the shippable cart total (e.g. 12 means 12%).</description>
    <label>Shipping Rate Percent</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>